[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/AI/AIPlayer.gd" type="Script" id=2]
[ext_resource path="res://Player/AI/AINodes.gd" type="Script" id=3]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -52, 24 )
b = Vector2( -28, 24 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -16, 30 )
b = Vector2( -16, 46 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 52, 24 )
b = Vector2( 28, 24 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 16, 30 )
b = Vector2( 16, 46 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2066.73, 1388.58 )

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="PhysicsMaterial" id=7]
friction = 0.0

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frame = 1

[node name="AINodes" type="Node2D" parent="." index="7"]
script = ExtResource( 3 )

[node name="LeftCollider" type="Area2D" parent="AINodes" index="0"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AINodes/LeftCollider" index="0"]
shape = SubResource( 1 )

[node name="LeftEdgeDetector" type="Area2D" parent="AINodes" index="1"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AINodes/LeftEdgeDetector" index="0"]
shape = SubResource( 2 )

[node name="RightCollider" type="Area2D" parent="AINodes" index="2"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AINodes/RightCollider" index="0"]
shape = SubResource( 3 )

[node name="RightEdgeDetector" type="Area2D" parent="AINodes" index="3"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AINodes/RightEdgeDetector" index="0"]
shape = SubResource( 4 )

[node name="SearchArea" type="Area2D" parent="AINodes" index="4"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AINodes/SearchArea" index="0"]
shape = SubResource( 5 )

[node name="Path" type="Path2D" parent="AINodes" index="5"]
curve = SubResource( 6 )

[node name="BulletCollider" parent="." index="8"]
physics_material_override = SubResource( 7 )
[connection signal="body_entered" from="AINodes/SearchArea" to="." method="_on_player_enter_SearchArea"]
[connection signal="body_exited" from="AINodes/SearchArea" to="." method="_on_player_exit_SearchArea"]
